<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Andrei Heidelbacher <andrei.heidelbacher@gmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
  <string name="app_name">Algoventure</string>
  <string name="loading">Loading...</string>
  <string name="play">Play</string>
  <string name="rankings">Rankings</string>
  <string name="badges">Badges</string>
  <string name="exit">Exit</string>
  <string name="new_game">New game</string>
  <string name="load_game">Load game</string>
  <string name="menu">Menu</string>
  <string name="main_menu">Main menu</string>
  <string name="continue_game">Continue game</string>
  <string name="exit_game">Exit game</string>
  <string name="wait">Wait</string>
  <string name="inventory">Inventory</string>
  <string name="hero_selection">Choose your hero</string>
  <string name="knight">Knight</string>
  <string name="rogue">Rogue</string>
  <string name="hunter">Hunter</string>
  <string name="wizard">Wizard</string>
  <string name="torch">Torch</string>
  <string name="knight_statue">Knight statue</string>
  <string name="wizard_statue">Wizard statue</string>
  <string name="game_over">Game over</string>
  <string name="game_won">Game won!</string>
</resources>
