<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Andrei Heidelbacher <andrei.heidelbacher@gmail.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mainActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="center"
  tools:context="com.andreihh.algoventure.app.MainActivity">
  <TextView
    android:id="@+id/titleView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_size"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:text="@string/app_name"
    android:textSize="@dimen/title_text_size"
    android:background="@drawable/ui_red"/>
  <ImageView
    android:id="@+id/startTorch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/titleView"
    android:layout_alignStart="@+id/titleView"
    android:src="@drawable/torch"
    android:contentDescription="@string/torch"/>
  <ImageView
    android:id="@+id/endTorch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@id/titleView"
    android:layout_alignEnd="@+id/titleView"
    android:src="@drawable/torch"
    android:contentDescription="@string/torch"/>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/titleView"
    android:layout_centerHorizontal="true">
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_size"
      android:drawableTop="@drawable/play_button"
      android:text="@string/play"
      android:onClick="onPlay"/>
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_size"
      android:drawableTop="@drawable/rankings_button"
      android:text="@string/rankings"
      android:onClick="onRankings"/>
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_size"
      android:drawableTop="@drawable/badges_button"
      android:text="@string/badges"
      android:onClick="onBadges"/>
  </LinearLayout>
  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignEnd="@+id/titleView">
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/knight_statue"
      android:contentDescription="@string/knight_statue"/>
    <ImageButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/exit_button"
      android:onClick="onExit"
      android:contentDescription="@string/exit"/>
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/wizard_statue"
      android:contentDescription="@string/wizard_statue"/>
  </LinearLayout>
</RelativeLayout>
